fix bottom-right overflow indicator

--- a/app/web/html/input.css
+++ b/app/web/html/input.css
@@ -68,6 +68,11 @@
   ::-webkit-scrollbar-button:horizontal:single-button:increment:hover {
     border-color: transparent transparent transparent #57534e;
   }
+
+  ::-webkit-resizer {
+    background-size: cover;
+    background-image: url("/static/media/shared/notches.svg");
+  }
   /* End light theme scrollbars */
 
   /* Start dark theme scrollbars */
@@ -133,6 +138,10 @@
 
   .dark ::-webkit-scrollbar-button:horizontal:single-button:increment:hover {
     border-color: transparent transparent transparent #d6d3d1;
+  }
+  .dark ::-webkit-resizer {
+    background-size: cover;
+    background-image: url("/static/media/shared/notches-dark.svg");
   }
   /* End dark theme scrollbars */
   /* End scrollbar styling */
